--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -49,11 +49,11 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* Nice blue for links */
 a {
-  color: rgb(60, 216, 255);
+  color: #55acee;
 }
 
 a:hover {
-  color: #59B8FF;
+  color: #74C1FB;
 }
 
 /* Spacing
