--- a/custom.css
+++ b/custom.css
@@ -35,7 +35,7 @@ a {
 }
 
 .container {
-  padding-top: 160px;
+  padding-top: 140px;
 }
 
 .grid-table div div {
@@ -54,12 +54,8 @@ a {
   vertical-align: middle;
 }
 
-.custom-text-right {
-  text-align: center;
-}
-
-#cdn {
-  display: none;
+.custom-textarea {
+  height: 200px;
 }
 
 .custom-love {
