--- a/custom.css
+++ b/custom.css
@@ -69,6 +69,16 @@ a {
   max-width: 250px;
 }
 
+#twitter-widget-0 {
+  margin-left: 20px;
+  opacity: 0.7;
+  transition: opacity .3s;
+}
+
+#twitter-widget-0:hover {
+  opacity: 1;
+}
+
 @media (min-width: 544px) {
   .custom-text-right {
     text-align: right;
