--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -77,6 +77,14 @@
   float: right !important;
 }
 
+/* Send the elements to the left side with nav-left */
+.nav ul li.nav-left {
+  position: relative;
+  top: 7px;
+  right: -16px;
+  float: left !important;
+}
+
 .nav ul a.button,
 .nav ul button {
   margin: 0px 5px 0px 5px !important;
