--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -84,7 +84,7 @@
 
 /* Pushes the content div with effect */
 .content {
-  transition: margin-left .5s;
+  transition: margin-left .5s, margin-right .5s;
 }
 
 /* Change the style of the sidenav for non-mobiles */
