--- a/docs/custom-rtl.css
+++ b/docs/custom-rtl.css
@@ -8,7 +8,7 @@
 }
 
 .logo i.fa {
-  padding-right: 8px;
+  padding-left: 8px;
 }
 
 div.share-links {
@@ -22,8 +22,8 @@ div.share-links i.fa {
 }
 
 .title {
-    font-size: 12vmax;
-    padding-bottom: 10px;
+  font-size: 12vmax;
+  padding-bottom: 10px;
 }
 
 .column, .columns {
