Fix button-couple for RTL pages

--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -95,7 +95,7 @@ body {
   height: 100%;
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", sans-serif;
   background-color: #222;
   color: #E1E1E1;
 }
