--- a/docs/custom-rtl.css
+++ b/docs/custom-rtl.css
@@ -69,6 +69,10 @@ a {
   max-width: 250px;
 }
 
+.custom-down-cdn span {
+  font-size: 1.7rem;
+}
+
 #twitter-widget-0 {
   margin-left: 20px;
   opacity: 0.7;
