--- a/custom.css
+++ b/custom.css
@@ -69,6 +69,10 @@ a {
   max-width: 250px;
 }
 
+.custom-item {
+  padding-top: 7px;
+}
+
 #twitter-widget-0 {
   margin-left: 20px;
   opacity: 0.7;
