--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -71,9 +71,7 @@
 
 /* Send the elements to the right side with nav-right */
 .nav ul li.nav-right {
-  position: relative;
-  top: 7px;
-  right: 16px;
+  position: inherit;
   float: right !important;
 }
 
