--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -15,22 +15,6 @@ button, input, optgroup, select, textarea {
   font-family: "P Yekan", "Open Sans", sans-serif;
 }
 
-.column, .columns {
-  float: right;
-  margin-left: auto;
-}
-
-@media (min-width: 544px) {
-  .column:first-child, .columns:first-child {
-    margin-right: 0;
-    margin-left: auto;
-  }
-
-  .column, .columns {
-    margin-right: 4%;
-  }
-}
-
 .nav ul li {
   float: right;
   margin-bottom: 0px;
@@ -101,4 +85,52 @@ pre {
     border-right-style: none;
     border-left-style: solid;
   }
+}
+
+.column, .columns {
+  float: right;
+  margin-left: auto;
+}
+
+@media (min-width: 544px) {
+  .column:first-child, .columns:first-child {
+    margin-right: 0;
+    margin-left: auto;
+  }
+
+  .column, .columns {
+    margin-right: 4%;
+  }
+
+  /* Offsets */
+  .offset-by-one.column,
+  .offset-by-one.columns          { margin-right: 8.66666666667%; }
+  .offset-by-two.column,
+  .offset-by-two.columns          { margin-right: 17.3333333333%; }
+  .offset-by-three.column,
+  .offset-by-three.columns        { margin-right: 26%;            }
+  .offset-by-four.column,
+  .offset-by-four.columns         { margin-right: 34.6666666667%; }
+  .offset-by-five.column,
+  .offset-by-five.columns         { margin-right: 43.3333333333%; }
+  .offset-by-six.column,
+  .offset-by-six.columns          { margin-right: 52%;            }
+  .offset-by-seven.column,
+  .offset-by-seven.columns        { margin-right: 60.6666666667%; }
+  .offset-by-eight.column,
+  .offset-by-eight.columns        { margin-right: 69.3333333333%; }
+  .offset-by-nine.column,
+  .offset-by-nine.columns         { margin-right: 78.0%;          }
+  .offset-by-ten.column,
+  .offset-by-ten.columns          { margin-right: 86.6666666667%; }
+  .offset-by-eleven.column,
+  .offset-by-eleven.columns       { margin-right: 95.3333333333%; }
+
+  .offset-by-one-third.column,
+  .offset-by-one-third.columns    { margin-right: 34.6666666667%; }
+  .offset-by-two-thirds.column,
+  .offset-by-two-thirds.columns   { margin-right: 69.3333333333%; }
+
+  .offset-by-one-half.column,
+  .offset-by-one-half.columns     { margin-right: 52%; }
 }
