Add 3rd state for buttons (:active)

--- a/src/css/button.css
+++ b/src/css/button.css
@@ -76,6 +76,16 @@ input[type="button"]:hover {
   color: #000;
 }
 
+/* Simple button's active */
+a.button:active,
+button:active,
+input[type="submit"]:active,
+input[type="reset"]:active,
+input[type="button"]:active {
+  background-color: #b9b9b9;
+  border-color: #b9b9b9;
+}
+
 /* Disabled button */
 a.button:disabled,
 button:disabled,
@@ -113,6 +123,17 @@ input[type="button"].default:hover {
   color: #fff
 }
 
+/* Default blue button's active */
+a.button.default:active,
+button.default:active,
+input[type="submit"].default:active,
+input[type="reset"].default:active,
+input[type="button"].default:active {
+  background-color: #4b82b7;
+  border-color: #4b82b7;
+
+}
+
 /* Success green button */
 a.button.success,
 button.success,
@@ -132,6 +153,16 @@ input[type="button"].success:hover {
   background-color: #2ecc71;
   border-color: #2ecc71;
   color: #fff;
+}
+
+/* Success green button's active */
+a.button.success:active,
+button.success:active,
+input[type="submit"].success:active,
+input[type="reset"].success:active,
+input[type="button"].success:active {
+  background-color: #21a057;
+  border-color: #21a057;
 }
 
 /* Danger red button */
@@ -155,6 +186,16 @@ input[type="button"].danger:hover {
   color: #fff;
 }
 
+/* Danger red button's active */
+a.button.danger:active,
+button.danger:active,
+input[type="submit"].danger:active,
+input[type="reset"].danger:active,
+input[type="button"].danger:active {
+  background-color: #bd382a;
+  border-color: #bd382a;
+}
+
 /* Warning orange button */
 a.button.warning,
 button.warning,
@@ -174,6 +215,16 @@ input[type="button"].warning:hover {
   background-color: #e67e22;
   border-color: #e67e22;
   color: #fff;
+}
+
+/* Warning orange button's active */
+a.button.warning:active,
+button.warning:active,
+input[type="submit"].warning:active,
+input[type="reset"].warning:active,
+input[type="button"].warning:active {
+  background-color: #c16819;
+  border-color: #c16819;
 }
 
 .button-couple button:not(:first-child):not(:last-child),
