Add default text selection color

--- a/src/css/meshki.css
+++ b/src/css/meshki.css
@@ -145,6 +145,14 @@ hr {
   margin-bottom: 3.5rem;
 }
 
+/* Text selection color */
+::selection {
+  background: #15acee; /* WebKit/Blink Browsers */
+}
+::-moz-selection {
+  background: #15acee; /* Gecko Browsers */
+}
+
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
