--- a/src/css/button.css
+++ b/src/css/button.css
@@ -233,9 +233,7 @@ input[type="button"].warning:active {
   border-style: none;
   border-radius: 0;
   display: block;
-  margin: -5px !important;
-  margin-right: auto !important;
-  margin-left: auto !important;
+  margin: -5px auto !important;
 }
 
 @media (min-width: 768px) {
