--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -14,8 +14,8 @@ footer, .footer {
   max-width: 100%;
   background-color: #111;
   border-top: 2px solid #E1E1E1;
-  margin: 25px 0px 0px 0px;
-  padding: 25px 50px 25px 50px;
+  margin: 25px 0 0 0;
+  padding: 25px 50px;
   text-align: center;
 }
 
@@ -33,7 +33,8 @@ footer.compact .columns,
 }
 
 /* Remove bottom margin of .row for footer, it takes lots of space */
-footer .row {
+footer .row,
+.footer .row {
   margin-bottom: 0px;
 }
 
