--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -6,7 +6,20 @@
 * https://opensource.org/licenses/MIT
 */
 
-/* General RTL Settings */
+/* Table of contents
+––––––––––––––––––––––––––––––––––––––––––––––––––
+- General RTL
+- Buttons
+- Footer
+- Forms
+- Grid System
+- Navbar
+- Sidenav
+- Tables
+*/
+
+/* General RTL
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 body {
   direction: rtl;
   font-family: "P Yekan", "Open Sans", sans-serif;
@@ -22,6 +35,9 @@ pre {
   direction: ltr;
 }
 
+/* Buttons
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /* Change the button size for RTL version */
 a.button,
 button,
@@ -29,55 +45,6 @@ input[type="submit"],
 input[type="reset"],
 input[type="button"] {
   padding: 6px 15px;
-}
-
-/* Select background must be on the left */
-select {
-  background-position: 2% 50%;
-}
-
-/* Align the table content to right */
-td, th {
-  text-align: right;
-}
-
-/* Navbar buttons should be on the right side */
-.nav ul li {
-  float: right;
-}
-
-/* Logo of the website, it must be the first child of navbar*/
-.nav ul li:first-child a.logo i {
-  color: black;
-}
-
-.nav-dropdown-content a {
-  text-align: right;
-}
-
-/* Sidenav starts from the right */
-.sidenav {
-  left: auto;
-  right: -1px;
-  border-left: 1px solid #818181;
-}
-
-/* Different padding of RTL Sidenav */
-.sidenav a {
-  padding: 8px 32px 8px 8px;
-}
-
-/* Sidenav close button should be on the left */
-.sidenav-close-button {
-  right: auto;
-  left: 0;
-  padding-right: 0 !important;
-  padding-left: 30px !important;
-}
-
-/* Margin fix for checkboxes and radio buttons */
-input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before {
-  margin: 4px auto auto 10px;
 }
 
 /* Middle button of button couples for mobile version */
@@ -123,57 +90,118 @@ input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before
   }
 }
 
+/* Footer
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+@media (min-width: 544px) {
+  /* Footer text alignment for RTL */
+  footer, .footer {
+    text-align: right;
+  }
+}
+
+/* Forms
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Select background must be on the left */
+select {
+  background-position: 2% 50%;
+}
+
+/* Margin fix for checkboxes and radio buttons */
+input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before {
+  margin: 4px auto auto 10px;
+}
+
+/* Grid System
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
 /* RTL columns */
-.column, .columns {
+.one, .two, .three, .four, .five,
+.six, .seven, .eight, .nine,
+.ten, .eleven, .twelve {
   float: right;
   margin-left: auto;
 }
 
 @media (min-width: 544px) {
   /* A bit of clean up for columns on tablets and up */
-  .column:first-child, .columns:first-child {
+  .one:first-child, .two:first-child, .three:first-child, .four:first-child,
+  .five:first-child, .six:first-child, .seven:first-child, .eight:first-child,
+  .nine:first-child, .ten:first-child, .eleven:first-child,
+  .twelve:first-child {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .column, .columns {
+  .one, .two, .three, .four, .five,
+  .six, .seven, .eight, .nine,
+  .ten, .eleven, .twelve {
     margin-right: 4%;
   }
 
-  /* Footer text alignment for RTL */
-  footer, .footer {
-    text-align: right;
-  }
-
   /* Offsets from right */
-  .offset-by-one.column,
-  .offset-by-one.columns          { margin-right: 8.66666666667%; }
-  .offset-by-two.column,
-  .offset-by-two.columns          { margin-right: 17.3333333333%; }
-  .offset-by-three.column,
-  .offset-by-three.columns        { margin-right: 26%;            }
-  .offset-by-four.column,
-  .offset-by-four.columns         { margin-right: 34.6666666667%; }
-  .offset-by-five.column,
-  .offset-by-five.columns         { margin-right: 43.3333333333%; }
-  .offset-by-six.column,
-  .offset-by-six.columns          { margin-right: 52%;            }
-  .offset-by-seven.column,
-  .offset-by-seven.columns        { margin-right: 60.6666666667%; }
-  .offset-by-eight.column,
-  .offset-by-eight.columns        { margin-right: 69.3333333333%; }
-  .offset-by-nine.column,
-  .offset-by-nine.columns         { margin-right: 78.0%;          }
-  .offset-by-ten.column,
-  .offset-by-ten.columns          { margin-right: 86.6666666667%; }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns       { margin-right: 95.3333333333%; }
+  .offset-by-one          { margin-right: 8.66666666667%; }
+  .offset-by-two          { margin-right: 17.3333333333%; }
+  .offset-by-three        { margin-right: 26%;            }
+  .offset-by-four         { margin-right: 34.6666666667%; }
+  .offset-by-five         { margin-right: 43.3333333333%; }
+  .offset-by-six          { margin-right: 52%;            }
+  .offset-by-seven        { margin-right: 60.6666666667%; }
+  .offset-by-eight        { margin-right: 69.3333333333%; }
+  .offset-by-nine         { margin-right: 78.0%;          }
+  .offset-by-ten          { margin-right: 86.6666666667%; }
+  .offset-by-eleven       { margin-right: 95.3333333333%; }
 
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns    { margin-right: 34.6666666667%; }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns   { margin-right: 69.3333333333%; }
+  .offset-by-one-third    { margin-right: 34.6666666667%; }
+  .offset-by-two-thirds   { margin-right: 69.3333333333%; }
 
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns     { margin-right: 52%; }
+  .offset-by-one-half     { margin-right: 52%; }
+}
+
+/* Navbar
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Navbar buttons should be on the right side */
+.nav ul li {
+  float: right;
+}
+
+/* Logo of the website, it must be the first child of navbar*/
+.nav ul li:first-child a.logo i {
+  color: black;
+}
+
+.nav-dropdown-content a {
+  text-align: right;
+}
+
+/* Sidenav
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+/* Sidenav starts from the right */
+.sidenav {
+  left: auto;
+  right: -1px;
+  border-left: 1px solid #818181;
+}
+
+/* Different padding of RTL Sidenav */
+.sidenav a {
+  padding: 8px 32px 8px 8px;
+}
+
+/* Sidenav close button should be on the left */
+.sidenav-close-button {
+  right: auto;
+  left: 0;
+  padding-right: 0 !important;
+  padding-left: 30px !important;
+}
+
+/* Tables
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+/* Align the table content to right */
+td, th {
+  text-align: right;
 }
