--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -27,8 +27,9 @@
 }
 
 /* Columns fill their parent from the left side */
-.column,
-.columns {
+.one, .two, .three, .four, .five,
+.six, .seven, .eight, .nine,
+.ten, .eleven, .twelve {
   width: 100%;
   float: left;
   box-sizing: border-box;
@@ -50,71 +51,59 @@
   }
 
   /* Left margin for columns so they do not collide */
-  .column,
-  .columns {
+  .one, .two, .three, .four, .five,
+  .six, .seven, .eight, .nine,
+  .ten, .eleven, .twelve {
     margin-left: 4%;
   }
 
   /* The first column doesn't need left margin */
-  .column:first-child,
-  .columns:first-child {
+  .one:first-child, .two:first-child, .three:first-child, .four:first-child,
+  .five:first-child, .six:first-child, .seven:first-child, .eight:first-child,
+  .nine:first-child, .ten:first-child, .eleven:first-child,
+  .twelve:first-child {
     margin-left: 0;
   }
 
-  .one.column,
-  .one.columns                    { width: 4.66666666667%; }
-  .two.columns                    { width: 13.3333333333%; }
-  .three.columns                  { width: 22%;            }
-  .four.columns                   { width: 30.6666666667%; }
-  .five.columns                   { width: 39.3333333333%; }
-  .six.columns                    { width: 48%;            }
-  .seven.columns                  { width: 56.6666666667%; }
-  .eight.columns                  { width: 65.3333333333%; }
-  .nine.columns                   { width: 74%;            }
-  .ten.columns                    { width: 82.6666666667%; }
-  .eleven.columns                 { width: 91.3333333333%; }
+  .one                    { width: 4.66666666667%; }
+  .two                    { width: 13.3333333333%; }
+  .three                  { width: 22%;            }
+  .four                   { width: 30.6666666667%; }
+  .five                   { width: 39.3333333333%; }
+  .six                    { width: 48%;            }
+  .seven                  { width: 56.6666666667%; }
+  .eight                  { width: 65.3333333333%; }
+  .nine                   { width: 74%;            }
+  .ten                    { width: 82.6666666667%; }
+  .eleven                 { width: 91.3333333333%; }
   /* Fill the row, with no margin on the left */
-  .twelve.columns                 { width: 100%; margin-left: 0; }
+  .twelve                 { width: 100%; margin-left: 0; }
 
   /* Proportional columns */
-  .one-third.column,
-  .one.third.column,              { width: 30.6666666667%; }
-  .two-thirds.column,
-  .two.thirds.column              { width: 65.3333333333%; }
+  .one-third,
+  .one.third,              { width: 30.6666666667%; }
+  .two-thirds,
+  .two.thirds              { width: 65.3333333333%; }
 
   /* Half of the container columns */
-  .one-half.column,
-  .one.half.column                { width: 48%; }
+  .one-half,
+  .one.half                { width: 48%; }
 
   /* Offsets */
-  .offset-by-one.column,
-  .offset-by-one.columns          { margin-left: 8.66666666667%; }
-  .offset-by-two.column,
-  .offset-by-two.columns          { margin-left: 17.3333333333%; }
-  .offset-by-three.column,
-  .offset-by-three.columns        { margin-left: 26%;            }
-  .offset-by-four.column,
-  .offset-by-four.columns         { margin-left: 34.6666666667%; }
-  .offset-by-five.column,
-  .offset-by-five.columns         { margin-left: 43.3333333333%; }
-  .offset-by-six.column,
-  .offset-by-six.columns          { margin-left: 52%;            }
-  .offset-by-seven.column,
-  .offset-by-seven.columns        { margin-left: 60.6666666667%; }
-  .offset-by-eight.column,
-  .offset-by-eight.columns        { margin-left: 69.3333333333%; }
-  .offset-by-nine.column,
-  .offset-by-nine.columns         { margin-left: 78.0%;          }
-  .offset-by-ten.column,
-  .offset-by-ten.columns          { margin-left: 86.6666666667%; }
-  .offset-by-eleven.column,
-  .offset-by-eleven.columns       { margin-left: 95.3333333333%; }
+  .offset-by-one          { margin-left: 8.66666666667%; }
+  .offset-by-two          { margin-left: 17.3333333333%; }
+  .offset-by-three        { margin-left: 26%;            }
+  .offset-by-four         { margin-left: 34.6666666667%; }
+  .offset-by-five         { margin-left: 43.3333333333%; }
+  .offset-by-six          { margin-left: 52%;            }
+  .offset-by-seven        { margin-left: 60.6666666667%; }
+  .offset-by-eight        { margin-left: 69.3333333333%; }
+  .offset-by-nine         { margin-left: 78.0%;          }
+  .offset-by-ten          { margin-left: 86.6666666667%; }
+  .offset-by-eleven       { margin-left: 95.3333333333%; }
 
-  .offset-by-one-third.column,
-  .offset-by-one-third.columns    { margin-left: 34.6666666667%; }
-  .offset-by-two-thirds.column,
-  .offset-by-two-thirds.columns   { margin-left: 69.3333333333%; }
+  .offset-by-one-third    { margin-left: 34.6666666667%; }
+  .offset-by-two-thirds   { margin-left: 69.3333333333%; }
 
-  .offset-by-one-half.column,
-  .offset-by-one-half.columns     { margin-left: 52%; }
+  .offset-by-one-half     { margin-left: 52%; }
 }
