--- a/src/css/rtl.css
+++ b/src/css/rtl.css
@@ -117,46 +117,39 @@ input[type=checkbox]+label.checkbox:before, input[type=radio]+label.radio:before
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* RTL columns */
-.one, .two, .three, .four, .five,
-.six, .seven, .eight, .nine,
-.ten, .eleven, .twelve {
+.col {
   float: right;
   margin-left: auto;
 }
 
 @media (min-width: 544px) {
   /* A bit of clean up for columns on tablets and up */
-  .one:first-child, .two:first-child, .three:first-child, .four:first-child,
-  .five:first-child, .six:first-child, .seven:first-child, .eight:first-child,
-  .nine:first-child, .ten:first-child, .eleven:first-child,
-  .twelve:first-child {
+  .col:first-child {
     margin-right: 0;
     margin-left: auto;
   }
 
-  .one, .two, .three, .four, .five,
-  .six, .seven, .eight, .nine,
-  .ten, .eleven, .twelve {
+  .col {
     margin-right: 4%;
   }
 
   /* Offsets from right */
-  .offset-by-one          { margin-right: 8.66666666667%; }
-  .offset-by-two          { margin-right: 17.3333333333%; }
-  .offset-by-three        { margin-right: 26%;            }
-  .offset-by-four         { margin-right: 34.6666666667%; }
-  .offset-by-five         { margin-right: 43.3333333333%; }
-  .offset-by-six          { margin-right: 52%;            }
-  .offset-by-seven        { margin-right: 60.6666666667%; }
-  .offset-by-eight        { margin-right: 69.3333333333%; }
-  .offset-by-nine         { margin-right: 78.0%;          }
-  .offset-by-ten          { margin-right: 86.6666666667%; }
-  .offset-by-eleven       { margin-right: 95.3333333333%; }
+  .offset-by-one.col          { margin-right: 8.66666666667%; }
+  .offset-by-two.col          { margin-right: 17.3333333333%; }
+  .offset-by-three.col        { margin-right: 26%;            }
+  .offset-by-four.col         { margin-right: 34.6666666667%; }
+  .offset-by-five.col         { margin-right: 43.3333333333%; }
+  .offset-by-six.col          { margin-right: 52%;            }
+  .offset-by-seven.col        { margin-right: 60.6666666667%; }
+  .offset-by-eight.col        { margin-right: 69.3333333333%; }
+  .offset-by-nine.col         { margin-right: 78.0%;          }
+  .offset-by-ten.col          { margin-right: 86.6666666667%; }
+  .offset-by-eleven.col       { margin-right: 95.3333333333%; }
 
-  .offset-by-one-third    { margin-right: 34.6666666667%; }
-  .offset-by-two-thirds   { margin-right: 69.3333333333%; }
+  .offset-by-one-third.col    { margin-right: 34.6666666667%; }
+  .offset-by-two-thirds.col   { margin-right: 69.3333333333%; }
 
-  .offset-by-one-half     { margin-right: 52%; }
+  .offset-by-one-half.col     { margin-right: 52%; }
 }
 
 /* Navbar
