--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -10,6 +10,11 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 /* General attributes */
+
+nav, .nav {
+  height: 0;
+}
+
 nav ul,
 .nav ul {
   width: 100%;
