--- a/src/css/form.css
+++ b/src/css/form.css
@@ -65,6 +65,56 @@ select:-moz-focusring {
   text-shadow: 0 0 0 #000;
 }
 
+select.sharp,
+button.sharp,
+textarea.sharp,
+input.sharp,
+fieldset.sharp,
+pre.sharp,
+code.sharp,
+a.button.sharp {
+  border-radius: 0 !important;
+}
+
+body.sharp select,
+body.sharp button,
+body.sharp textarea,
+body.sharp input,
+body.sharp fieldset,
+body.sharp pre,
+body.sharp code,
+body.sharp a.button,
+body.sharp input[type=checkbox]+label.checkbox:before{
+  border-radius: 0;
+}
+
+body.sharp input[type=range]::-webkit-slider-runnable-track,
+body.sharp input[type=range]::-webkit-slider-thumb {
+  border-radius: 0;
+}
+
+body.sharp input[type=range]::-moz-range-track,
+body.sharp input[type=range]::-moz-range-thumb {
+  border-radius: 0;
+}
+
+body.sharp input[type=range]::-ms-thumb,
+body.sharp input[type=range]::-ms-fill-lower,
+body.sharp input[type=range]::-ms-fill-upper {
+  border-radius: 0;
+}
+
+select.unsharp,
+button.unsharp,
+textarea.unsharp,
+input.unsharp,
+fieldset.unsharp,
+pre.unsharp,
+code.unsharp,
+a.button.unsharp {
+  border-radius: 5px !important;
+}
+
 /* Dropdown arrow for everyone! */
 select {
   outline: 0 !important;
@@ -198,13 +248,12 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=range]::-webkit-slider-thumb {
-  height: 20px;
-  width: 20px;
+  height: 22px;
+  width: 22px;
   border-radius: 25px;
   background-color: #E1E1E1;
   cursor: pointer;
   -webkit-appearance: none;
-  margin-top: 1px;
   border: 2px solid transparent;
 }
 
