--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -56,6 +56,13 @@
   outline: 0 !important;
 }
 
+.sidenav button {
+  margin-right: 20px !important;
+  margin-left: 20px !important;
+  width: 84%;
+  min-width: 150px;
+}
+
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
   color: #E1E1E1;
