--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -44,7 +44,7 @@
   transition: opacity .5s, visibility .5s;
 }
 
-/* The navigation menu's links */
+/* The links inside side navigation panel */
 .sidenav a {
   display: block;
   font-size: 1.8rem;
@@ -56,6 +56,7 @@
   outline: 0 !important;
 }
 
+/* The buttons inside side navigation panel */
 .sidenav button {
   margin-right: 20px !important;
   margin-left: 20px !important;
